# mua

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  vcpkg-configuration.json  vcpkg.json
.cargo/: config.toml
crates/mua_assets/: Cargo.toml
crates/mua_assets/src/: lib.rs
crates/mua_img/: Cargo.toml
crates/mua_img/src/: lib.rs  main.rs
crates/mua_wav/: Cargo.toml
crates/mua_wav/src/: lib.rs  main.rs
legal/: FFMPEG-SOURCE-OFFER.md  NOTICE.md
scripts/: build.ps1  check.ps1  clippy.ps1  format.ps1  import-build-environment.ps1  prepare-vcpkg.ps1  refresh-ffmpeg-port.ps1  test.ps1
scripts/ffmpeg-port-overlay/: mua-ffmpeg.patch
vcpkg/ffmpeg/: portfile.cmake  vcpkg.json
