[package]
name = "mua_wav"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
clap.workspace = true
ffmpeg-next = { version = "8.1.0", default-features = false, features = [
    "codec",
    "filter",
    "format",
    "software-resampling",
    "static",
] }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true

[lints]
workspace = true
